--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Se doreste crearea unui joc cu o interfata atractiva pentru utilizatori care sa respecte urmatoarea cerinta:
-"Impartiti careul dat în opt parti continui şi egale ca arie, care să aiba fiecare cate o bulina din fiecare fel. Liniile de separare se vor trasa numai pe laturile patratelelor". 
-Pentru inovatie, am adaugat 3 nivele. In functie de nivel se va schimba dimensiunea careului. Jocul va lua sfasit in momentul in care utilizatorul va forma grupe cu acelasi numar
+"Impartiti careul dat în opt parti continui şi egale ca arie, care să aiba fiecare cate o bulina din fiecare fel.
+Liniile de separare se vor trasa numai pe laturile patratelelor". 
+Pentru inovatie, am adaugat 3 nivele. In functie de nivel se va schimba dimensiunea careului. 
+Jocul va lua sfasit in momentul in care utilizatorul va forma grupe cu acelasi numar
 de buline de culori diferite sau cand va apasa butonul "HELP", astfel ii va aparea o posibila solutie.
 
