--- a/README
+++ b/README
@@ -5,4 +5,5 @@ Pentru inovatie, am adaugat 3 nivele. In functie de nivel se va schimba dimensiu
 Jocul va lua sfasit in momentul in care utilizatorul va forma grupe cu acelasi numar
 de buline de culori diferite sau cand va apasa butonul "HELP", astfel ii va aparea o posibila solutie.
 
-![](gif.mp4)
+
+[![Demo CountPages alpha](https://j.gifs.com/jZo865.gif)](https://gifs.com/gif/demo-jZo865)
